# sjung

./: .flake8  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  test_settings.py
sjung/: asgi.py  settings.py  urls.py  wsgi.py
sjung/songs/: admin.py  apps.py  models.py  views.py
sjung/songs/migrations/: 0001_initial.py
sjung/songs/templates/songs/: song_detail.html  song_list.html
static/: styles.css
templates/: base.html  index.html
tests/sjung.songs/: test_views.py
