[tool.poetry]
name = "sjung"
version = "0.1.0"
description = "An online songbook"
authors = ["jens persson <jens@persson.cx>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.1"
django-allauth = "^0.54.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
pytest-django = "^4.5.2"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
black = "^23.3.0"
coverage = {extras = ["toml"], version = "^7.2.5"}
flake8 = "^6.0.0"
isort = "^5.12.0"
pep8-naming = "^0.13.3"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
